collaborative-voting-app/vote/deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vote
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - image: okteto/collaborative-voting-app-vote
        name: vote
